--- a/client/src/components/loading/loading.css
+++ b/client/src/components/loading/loading.css
@@ -4,6 +4,7 @@
     left: 0; right: 0;
     text-align: center;
     position: fixed;
+    z-index: 10000;
 }
 
 #loading-msg{
